--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,15 @@ services:
     depends_on:
       # - db
       - redis
+    environment:
+      - REDIS_HOST=redis
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   # db:
   #   image: postgres:13.3
   #   volumes:
   #     - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - REDIS_HOST=redis
+  #   environment:
   #     - POSTGRES_USER=postgres
   #     - POSTGRES_PASSWORD=postgres
   #     - POSTGRES_DB=postgres
